--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <main>
       <router-outlet></router-outlet>
     </main>
+    <app-notification-container></app-notification-container>
   </div>
 </div>
 <div *ngIf="!isAuthenticated()">
